Code cleanup (#277)